fixed the scrollbar issue

--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -385,6 +385,7 @@ img::-moz-selection {
 
 body {
     webkit-tap-highlight-color: rgba(255,255,255,.2);
+    padding-right: 0px;
     overflow-x: hidden !important;
 }
 
